# keplai

./: .gitignore  Dockerfile  LICENSE  README.md  autoresearch.jsonl  docker-compose.yml  prd.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: auth.py  dependencies.py  main.py  schemas.py
api/routers/: extraction.py  graph.py  ontology.py  query.py
docker/: fuseki-config.ttl
docs/plans/: 2026-03-15-graphai-implementation-plan.md  next-features.md
docs/superpowers/plans/: 2026-03-16-frontend-ux-overhaul.md
docs/superpowers/specs/: 2026-03-16-frontend-ux-overhaul-design.md  2026-03-16-triple-detail-view-design.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: layout.tsx
frontend/src/components/dashboard/: ontology-overview.tsx  quick-actions.tsx  recent-triples.tsx  stat-card.tsx
frontend/src/components/layout/: app-shell.tsx  sidebar-item.tsx  sidebar.tsx
frontend/src/components/query/: sparql-editor.tsx
frontend/src/components/triples/: entity-context.tsx  provenance-card.tsx  triple-detail-panel.tsx
frontend/src/components/ui/: confirm-dialog.tsx  empty-state.tsx  page-tabs.tsx
frontend/src/hooks/: use-engine-status.ts  use-hash-route.ts
frontend/src/lib/: graph-utils.ts
frontend/src/pages/: dashboard.tsx  explorer.tsx  extraction.tsx  ontology.tsx  query.tsx  triples.tsx
frontend/src/types/: graph.ts
src/keplai/: __init__.py  cli.py  config.py  disambiguator.py  engine.py  exceptions.py  extractor.py  graph.py  nlq.py  ontology.py  provenance.py
src/keplai/vectorstore/: base.py  qdrant.py
tests/fixtures/: sample.ttl
tests/integration/: test_full_cycle.py  test_ontology.py
tests/unit/: test_api.py  test_disambiguator.py  test_extractor.py  test_namespace.py  test_nlq.py  test_ontology.py  test_ontology_import.py  test_ontology_multi.py  test_provenance.py  test_sparql.py  test_vectorstore.py
