[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keplai"
version = "0.1.0"
description = "SDK-first knowledge graph platform powered by Apache Jena Fuseki"
requires-python = ">=3.10"
dependencies = [
    "docker>=7.0.0",
    "rdflib>=7.0.0",
    "SPARQLWrapper>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
]
ai = [
    "openai>=1.30.0",
    "qdrant-client>=1.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]